--- a/TimeTrackManager/src/main/resources/application.properties
+++ b/TimeTrackManager/src/main/resources/application.properties
@@ -1,1 +1,5 @@
 
+spring.jpa.database=POSTGRESQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
+spring.datasource.username=postgres
+spring.datasource.password=Pas112
